--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="trocarFoto">TrocarFoto</button>
+        <button id="trocarfoto">TrocarFoto</button>
     </div>
 </body>
 </html>
